--- a/WildLifeApp/Base.lproj/Main.storyboard
+++ b/WildLifeApp/Base.lproj/Main.storyboard
@@ -137,16 +137,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lKA-65-bSR">
-                                <rect key="frame" x="180" y="187" width="240" height="128"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ThR-aS-hWI">
                                 <rect key="frame" x="162" y="149" width="46" height="30"/>
                                 <state key="normal" title="Button"/>
                             </button>
+                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lKA-65-bSR">
+                                <rect key="frame" x="180" y="245" width="240" height="128"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="lKA-65-bSR" firstAttribute="centerY" secondItem="ZFN-Yp-vpK" secondAttribute="centerY" id="2vh-Y7-7vh"/>
+                            <constraint firstItem="lKA-65-bSR" firstAttribute="centerX" secondItem="ZFN-Yp-vpK" secondAttribute="centerX" id="LB8-O1-oZc"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="2vh-Y7-7vh"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="fbButton" destination="ThR-aS-hWI" id="Rj3-Kh-Jh8"/>
@@ -155,6 +164,62 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="StV-hn-iDZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1023" y="337"/>
+        </scene>
+        <!--Item 2-->
+        <scene sceneID="ntf-Zw-3Vw">
+            <objects>
+                <viewController id="tlz-tJ-lUG" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Abd-Me-knI"/>
+                        <viewControllerLayoutGuide type="bottom" id="IqA-0F-PIy"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="84y-nj-hf8">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="9TM-qR-Fgp"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rxE-hG-r3u" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2868" y="718"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="Mye-o4-f3u">
+            <objects>
+                <viewController id="oa7-Al-IJR" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="PiY-Db-1WN"/>
+                        <viewControllerLayoutGuide type="bottom" id="TDR-kv-YL4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="86M-54-7MV">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.25490196079999999" green="0.36470588240000001" blue="0.68235294120000001" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="PHO-rV-C6Y"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JBB-OV-snJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2868" y="57"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="L9e-g0-9Mq">
+            <objects>
+                <tabBarController storyboardIdentifier="HomeView" id="Ggl-0c-93l" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="e0J-af-92H">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="oa7-Al-IJR" kind="relationship" relationship="viewControllers" id="sie-gu-TRr"/>
+                        <segue destination="tlz-tJ-lUG" kind="relationship" relationship="viewControllers" id="y2V-qa-OQ6"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="x1O-AN-P49" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1904" y="316"/>
         </scene>
     </scenes>
     <resources>
