--- a/WildLifeApp/Base.lproj/Main.storyboard
+++ b/WildLifeApp/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <!--Intro View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="IntroViewController" customModule="WildLifeApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LogginView" id="BYZ-38-t0r" customClass="IntroViewController" customModule="WildLifeApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -141,15 +141,20 @@
                                 <rect key="frame" x="162" y="149" width="46" height="30"/>
                                 <state key="normal" title="Button"/>
                             </button>
-                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lKA-65-bSR">
-                                <rect key="frame" x="180" y="245" width="240" height="128"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lKA-65-bSR">
+                                <rect key="frame" x="20" y="550" width="80" height="30"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="g5b-fm-yM0"/>
+                                    <constraint firstAttribute="width" constant="80" id="qLu-c2-F1u"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="leadingMargin" secondItem="lKA-65-bSR" secondAttribute="leading" id="0UG-AY-UGt"/>
                             <constraint firstItem="lKA-65-bSR" firstAttribute="centerY" secondItem="ZFN-Yp-vpK" secondAttribute="centerY" id="2vh-Y7-7vh"/>
-                            <constraint firstItem="lKA-65-bSR" firstAttribute="centerX" secondItem="ZFN-Yp-vpK" secondAttribute="centerX" id="LB8-O1-oZc"/>
+                            <constraint firstItem="bSv-Pc-epz" firstAttribute="top" secondItem="lKA-65-bSR" secondAttribute="bottom" constant="20" id="atX-9x-cZE"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -187,7 +192,7 @@
         <!--Item 1-->
         <scene sceneID="Mye-o4-f3u">
             <objects>
-                <viewController id="oa7-Al-IJR" sceneMemberID="viewController">
+                <viewController id="oa7-Al-IJR" customClass="HomeViewController" customModule="WildLifeApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="PiY-Db-1WN"/>
                         <viewControllerLayoutGuide type="bottom" id="TDR-kv-YL4"/>
@@ -201,6 +206,9 @@
                                 <state key="normal" title="FB LOG OUT">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="logOut:" destination="oa7-Al-IJR" eventType="touchUpInside" id="Uge-Ng-NBH"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.25490196079999999" green="0.36470588240000001" blue="0.68235294120000001" alpha="1" colorSpace="calibratedRGB"/>
