--- a/WildLifeApp/Base.lproj/Main.storyboard
+++ b/WildLifeApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="f53-FI-q5o">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -137,24 +137,85 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ThR-aS-hWI">
-                                <rect key="frame" x="162" y="149" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
-                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lKA-65-bSR">
-                                <rect key="frame" x="20" y="550" width="80" height="30"/>
+                                <rect key="frame" x="20" y="550" width="150" height="30"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="g5b-fm-yM0"/>
-                                    <constraint firstAttribute="width" constant="80" id="qLu-c2-F1u"/>
+                                    <constraint firstAttribute="width" constant="150" id="qLu-c2-F1u"/>
                                 </constraints>
                             </view>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Account" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="732-rC-cYh">
+                                <rect key="frame" x="190" y="209" width="220" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="LKP-Kh-DWP"/>
+                                    <constraint firstAttribute="width" constant="220" id="PXL-uS-bDG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QPH-6f-GeU">
+                                <rect key="frame" x="190" y="247" width="220" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="220" id="bq4-Ry-RQe"/>
+                                    <constraint firstAttribute="height" constant="30" id="gap-LX-xlD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ThR-aS-hWI">
+                                <rect key="frame" x="190" y="285" width="220" height="30"/>
+                                <color key="backgroundColor" red="0.50373532029110279" green="1" blue="0.24954658846928479" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="220" id="4gc-UK-S6r"/>
+                                </constraints>
+                                <state key="normal" title=" Sign In">
+                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="logIn:" destination="f53-FI-q5o" eventType="touchUpInside" id="Ynb-JR-gyh"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BPs-76-943">
+                                <rect key="frame" x="246" y="323" width="107" height="30"/>
+                                <state key="normal" title="Create Account">
+                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="createAccount:" destination="f53-FI-q5o" eventType="touchUpInside" id="Rst-yv-Pip"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PYM-xj-hUt">
+                                <rect key="frame" x="235" y="397" width="130" height="30"/>
+                                <state key="normal" title="Forgot Password??">
+                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign in" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dqt-mV-Jbf">
+                                <rect key="frame" x="260" y="133" width="80.5" height="30"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="leadingMargin" secondItem="lKA-65-bSR" secondAttribute="leading" id="0UG-AY-UGt"/>
                             <constraint firstItem="lKA-65-bSR" firstAttribute="centerY" secondItem="ZFN-Yp-vpK" secondAttribute="centerY" id="2vh-Y7-7vh"/>
+                            <constraint firstItem="ThR-aS-hWI" firstAttribute="centerX" secondItem="QPH-6f-GeU" secondAttribute="centerX" id="486-dy-Iff"/>
+                            <constraint firstItem="ThR-aS-hWI" firstAttribute="top" secondItem="QPH-6f-GeU" secondAttribute="bottom" constant="8" id="4Bo-Ne-1Il"/>
+                            <constraint firstItem="QPH-6f-GeU" firstAttribute="top" secondItem="732-rC-cYh" secondAttribute="bottom" constant="8" id="F61-cC-5LM"/>
+                            <constraint firstItem="732-rC-cYh" firstAttribute="centerX" secondItem="ZFN-Yp-vpK" secondAttribute="centerX" id="FPy-qZ-3yv"/>
+                            <constraint firstItem="PYM-xj-hUt" firstAttribute="centerX" secondItem="QPH-6f-GeU" secondAttribute="centerX" id="IDk-M4-EGJ"/>
+                            <constraint firstItem="732-rC-cYh" firstAttribute="top" secondItem="xkB-7n-Tql" secondAttribute="bottom" constant="189" id="XOw-gr-UXE"/>
+                            <constraint firstItem="QPH-6f-GeU" firstAttribute="centerX" secondItem="732-rC-cYh" secondAttribute="centerX" id="YXW-Bx-CSy"/>
                             <constraint firstItem="bSv-Pc-epz" firstAttribute="top" secondItem="lKA-65-bSR" secondAttribute="bottom" constant="20" id="atX-9x-cZE"/>
+                            <constraint firstItem="PYM-xj-hUt" firstAttribute="top" secondItem="QPH-6f-GeU" secondAttribute="bottom" constant="120" id="nqp-rP-9nx"/>
+                            <constraint firstItem="Dqt-mV-Jbf" firstAttribute="top" secondItem="xkB-7n-Tql" secondAttribute="bottom" constant="113" id="oKS-Y0-WLd"/>
+                            <constraint firstItem="BPs-76-943" firstAttribute="centerX" secondItem="ThR-aS-hWI" secondAttribute="centerX" id="ubf-FT-vjn"/>
+                            <constraint firstItem="BPs-76-943" firstAttribute="top" secondItem="ThR-aS-hWI" secondAttribute="bottom" constant="8" id="wUS-OT-BYY"/>
+                            <constraint firstItem="Dqt-mV-Jbf" firstAttribute="centerX" secondItem="ZFN-Yp-vpK" secondAttribute="centerX" id="xdd-BC-hGA"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -163,7 +224,12 @@
                         </variation>
                     </view>
                     <connections>
-                        <outlet property="fbButton" destination="ThR-aS-hWI" id="Rj3-Kh-Jh8"/>
+                        <outlet property="accountField" destination="732-rC-cYh" id="AMR-AX-1wZ"/>
+                        <outlet property="createAccount" destination="BPs-76-943" id="MeV-8J-cTt"/>
+                        <outlet property="fbView" destination="lKA-65-bSR" id="1XB-9m-XH5"/>
+                        <outlet property="passwordField" destination="QPH-6f-GeU" id="6Gd-h1-URe"/>
+                        <outlet property="signButton" destination="ThR-aS-hWI" id="9i8-Hm-yIE"/>
+                        <outlet property="signLabel" destination="Dqt-mV-Jbf" id="nj4-VU-NVq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="StV-hn-iDZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
