--- a/WildLifeApp/Base.lproj/Main.storyboard
+++ b/WildLifeApp/Base.lproj/Main.storyboard
@@ -204,7 +204,7 @@
                                     <constraint firstAttribute="height" constant="60" id="lth-Vt-TIt"/>
                                     <constraint firstAttribute="width" constant="60" id="sVb-Ll-TlB"/>
                                 </constraints>
-                                <color key="color" red="1" green="0.85423734246637373" blue="0.17736390067563934" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="color" red="0.95158253205128207" green="0.75432436981582041" blue="0.12918185329141266" alpha="1" colorSpace="calibratedRGB"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -264,7 +264,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rxE-hG-r3u" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2868" y="718"/>
+            <point key="canvasLocation" x="3692" y="686"/>
         </scene>
         <!--Item 1-->
         <scene sceneID="Mye-o4-f3u">
@@ -298,7 +298,45 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JBB-OV-snJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2868" y="57"/>
+            <point key="canvasLocation" x="3692" y="25"/>
+        </scene>
+        <!--Information View Controller-->
+        <scene sceneID="cnu-Nd-WDJ">
+            <objects>
+                <viewController id="WLa-K0-R5y" customClass="InformationViewController" customModule="WildLifeApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="0wq-iN-lEu"/>
+                        <viewControllerLayoutGuide type="bottom" id="2BO-Bk-6Rn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="6vu-gh-weG">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aq9-Vh-l7e">
+                                <rect key="frame" x="225.5" y="285" width="150" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="lgH-cr-wfb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="aq9-Vh-l7e" firstAttribute="centerX" secondItem="6vu-gh-weG" secondAttribute="centerX" id="AWb-k7-Cj0"/>
+                            <constraint firstItem="aq9-Vh-l7e" firstAttribute="centerY" secondItem="6vu-gh-weG" secondAttribute="centerY" id="aBL-DD-6ea"/>
+                            <constraint firstItem="aq9-Vh-l7e" firstAttribute="centerX" secondItem="6vu-gh-weG" secondAttribute="centerX" id="ghb-mj-ubg"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="ghb-mj-ubg"/>
+                            </mask>
+                        </variation>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1hv-3u-gYP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1899" y="298"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="L9e-g0-9Mq">
@@ -316,7 +354,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x1O-AN-P49" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1904" y="316"/>
+            <point key="canvasLocation" x="2728" y="284"/>
         </scene>
     </scenes>
     <resources>
